--- a/make_array.ipynb
+++ b/make_array.ipynb
@@ -60,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "have 23 features\n",
-      "mZp is MZ2\n"
+      "have 24 features\n",
+      "mZp is MZ1\n"
      ]
     }
    ],
@@ -85,10 +85,15 @@
     "    print(\"before\", data.shape, 'after', out.shape)\n",
     "    return out\n",
     "\n",
+    "def getweight(wt, Xsec):\n",
+    "    #totalWt = sum(wt)\n",
+    "    wt = Xsec*139*wt\n",
+    "    return wt\n",
+    "\n",
     "def build_array(fname, features, cuts, mll_idx = 10, should_clean_arrays=True, **kwargs):\n",
     "    #print(features[mll_idx])\n",
     "    f = TFile.Open(fname)\n",
-    "    tree = f.tree_MUON_SCALE__1down\n",
+    "    tree = f.tree_NOMINAL\n",
     "    n_events = tree.GetEntries()\n",
     "    data = np.zeros((n_events, len(features)))\n",
     "    for n, (event, element) in enumerate(zip(tree, data)):\n",
@@ -132,18 +137,21 @@
     "            'dEtal34',    ## 19\n",
     "            'run',        ## 20\n",
     "            'event',      ## 21\n",
-    "            'weight')     ## 22\n",
+    "            'quadtype',   ## 22\n",
+    "            'weight')     ## 23\n",
     "\n",
     "# these are your cuts that preselect events, empty now\n",
-    "cuts = dict()\n",
+    "#cuts = dict()\n",
     "#cuts = {\"MZZ\": \"<120\"}\n",
+    "cuts = {\"quadtype\": \"==2\",\n",
+    "        \"MZZ\": \"<180\"}\n",
     "\n",
     "def unison_shuffled_copies(*arr):\n",
     "    assert all(len(a) for a in arr)\n",
     "    p = np.random.permutation(len(arr[0]))\n",
     "    return (a[p] for a in arr)\n",
     "\n",
-    "mll_idx = 10 # 10 when signal sample < 40GeV; 9 when signal >40GeV\n",
+    "mll_idx = 9 # 10 when signal sample < 40GeV; 9 when signal >40GeV\n",
     "\n",
     "print(\"have {} features\".format(len(features)))\n",
     "print(\"mZp is\", features[mll_idx])"
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -173,44 +181,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "before (2951, 23) after (2950, 23)\n",
-      "Training, validation, testing:  (1770, 23) (590, 23) (590, 23)\n",
-      "before (9781, 23) after (9773, 23)\n",
-      "Training, validation, testing:  (5863, 23) (1955, 23) (1955, 23)\n",
-      "before (8610, 23) after (8602, 23)\n",
-      "Training, validation, testing:  (5161, 23) (1720, 23) (1721, 23)\n",
-      "before (8316, 23) after (8311, 23)\n",
-      "Training, validation, testing:  (4986, 23) (1662, 23) (1663, 23)\n",
-      "before (7433, 23) after (7427, 23)\n",
-      "Training, validation, testing:  (4456, 23) (1485, 23) (1486, 23)\n",
-      "before (8702, 23) after (8697, 23)\n",
-      "Training, validation, testing:  (5218, 23) (1739, 23) (1740, 23)\n",
-      "before (6508, 23) after (6500, 23)\n",
-      "Training, validation, testing:  (3900, 23) (1300, 23) (1300, 23)\n",
-      "before (6982, 23) after (6975, 23)\n",
-      "Training, validation, testing:  (4185, 23) (1395, 23) (1395, 23)\n",
-      "before (7814, 23) after (7807, 23)\n",
-      "Training, validation, testing:  (4684, 23) (1561, 23) (1562, 23)\n",
-      "before (8423, 23) after (8414, 23)\n",
-      "Training, validation, testing:  (5048, 23) (1683, 23) (1683, 23)\n",
-      "before (4457, 23) after (4452, 23)\n",
-      "Training, validation, testing:  (2671, 23) (890, 23) (891, 23)\n",
-      "before (4514, 23) after (4508, 23)\n",
-      "Training, validation, testing:  (2704, 23) (902, 23) (902, 23)\n",
-      "before (4586, 23) after (4583, 23)\n",
-      "Training, validation, testing:  (2749, 23) (917, 23) (917, 23)\n",
-      "before (4502, 23) after (4499, 23)\n",
-      "Training, validation, testing:  (2699, 23) (900, 23) (900, 23)\n",
-      "before (4177, 23) after (4174, 23)\n",
-      "Training, validation, testing:  (2504, 23) (835, 23) (835, 23)\n",
-      "before (6860, 23) after (6852, 23)\n",
-      "Training, validation, testing:  (4111, 23) (1370, 23) (1371, 23)\n",
-      "before (9515, 23) after (9509, 23)\n",
-      "Training, validation, testing:  (5705, 23) (1902, 23) (1902, 23)\n",
-      "before (4756, 23) after (4749, 23)\n",
-      "Training, validation, testing:  (2849, 23) (950, 23) (950, 23)\n",
-      "before (3700, 23) after (3695, 23)\n",
-      "Training, validation, testing:  (2217, 23) (739, 23) (739, 23)\n"
+      "before (4493, 24) after (4490, 24)\n",
+      "Training, validation, testing:  (2694, 24) (898, 24) (898, 24)\n",
+      "before (4496, 24) after (4493, 24)\n",
+      "Training, validation, testing:  (2695, 24) (899, 24) (899, 24)\n",
+      "before (4256, 24) after (4254, 24)\n",
+      "Training, validation, testing:  (2552, 24) (851, 24) (851, 24)\n",
+      "before (4175, 24) after (4172, 24)\n",
+      "Training, validation, testing:  (2503, 24) (834, 24) (835, 24)\n",
+      "before (3800, 24) after (3797, 24)\n",
+      "Training, validation, testing:  (2278, 24) (759, 24) (760, 24)\n",
+      "before (6859, 24) after (6851, 24)\n",
+      "Training, validation, testing:  (4110, 24) (1370, 24) (1371, 24)\n",
+      "before (5792, 24) after (5786, 24)\n",
+      "Training, validation, testing:  (3471, 24) (1157, 24) (1158, 24)\n",
+      "before (9519, 24) after (9513, 24)\n",
+      "Training, validation, testing:  (5707, 24) (1903, 24) (1903, 24)\n",
+      "before (7567, 24) after (7561, 24)\n",
+      "Training, validation, testing:  (4536, 24) (1512, 24) (1513, 24)\n",
+      "before (4757, 24) after (4750, 24)\n",
+      "Training, validation, testing:  (2850, 24) (950, 24) (950, 24)\n",
+      "before (4035, 24) after (4033, 24)\n",
+      "Training, validation, testing:  (2419, 24) (807, 24) (807, 24)\n",
+      "before (3700, 24) after (3695, 24)\n",
+      "Training, validation, testing:  (2217, 24) (739, 24) (739, 24)\n"
      ]
     }
    ],
@@ -218,7 +212,7 @@
     "import io\n",
     "import numpy as np\n",
     "\n",
-    "msamp = [5,7,9,11,13,15,17,19,23,27,31,35,39,45,51,57,63,69,75]\n",
+    "msamp = [42,45,48,51,54,57,60,63,66,69,72,75]\n",
     "\n",
     "## Need to do rescale to only training datasets\n",
     "## firstly sum them together to fit transform\n",
@@ -257,22 +251,22 @@
     "    #print(raw_signal[0:3])\n",
     "    #print(signal[0:3])\n",
     "   \n",
-    "    with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/sysData_down/data_npy/tree_{}GeV.npy'.format(mass), 'wb') as f:\n",
+    "    with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/UnscaledData/data_npy/tree_{}GeV.npy'.format(mass), 'wb') as f:\n",
     "        np.save(f, signal)\n",
     "\n",
     "    n_trains = int(len(signal)*0.6)\n",
     "    n_vals = int(len(signal)*0.8)\n",
     "    \n",
     "    strain = signal[0:n_trains]\n",
-    "    with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/sysData_down/train/tree_{}GeV.npy'.format(mass), 'wb') as f:\n",
+    "    with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/UnscaledData/train/tree_{}GeV.npy'.format(mass), 'wb') as f:\n",
     "        np.save(f, strain)\n",
     "    \n",
     "    sval = signal[n_trains:n_vals]\n",
-    "    with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/sysData_down/Validation/tree_{}GeV.npy'.format(mass), 'wb') as f:\n",
+    "    with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/UnscaledData/Validation/tree_{}GeV.npy'.format(mass), 'wb') as f:\n",
     "        np.save(f, sval)\n",
     "    \n",
     "    stest = signal[n_vals:]\n",
-    "    with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/sysData_down/test/tree_{}GeV.npy'.format(mass), 'wb') as f:\n",
+    "    with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/UnscaledData/test/tree_{}GeV.npy'.format(mass), 'wb') as f:\n",
     "        np.save(f, stest)\n",
     "        \n",
     "    print (\"Training, validation, testing: \", strain.shape, sval.shape, stest.shape)\n"
@@ -288,22 +282,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "before (53000, 23) after (52954, 23)\n",
-      "Training, validation, testing:  (31772, 23) (10591, 23) (10591, 23)\n"
+      "before (52953, 24) after (22918, 24)\n",
+      "Training, validation, testing:  (13750, 24) (4584, 24) (4584, 24)\n",
+      "Weighted training, validation, testing:  568.2608611656711 191.02904621943267 189.81990211790256\n"
      ]
     }
    ],
    "source": [
+    "import io\n",
+    "import numpy as np\n",
+    "\n",
     "bkg1 = build_array(\n",
-    "    '/Users/zhuheling/ML/keras/example_hep/myTest/data/tree_bk.root',\n",
-    "    features, cuts, mll_idx=10)\n",
+    "    '/Users/zhuheling/ML/keras/example_hep/myTest/data/tree_qqZZ.root',\n",
+    "    features, cuts, mll_idx=9)\n",
     "\n",
     "#print(raw_bkg1[0:3])\n",
     "#bkg1 = np.zeros( (len(raw_bkg1), 43))\n",
@@ -312,25 +310,31 @@
     "#bkg1[:,40:43] = raw_bkg1[:,20:23]\n",
     "#print(bkg1[0:3])\n",
     "\n",
-    "with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/sysData_down/data_npy/tree_bk.npy'.format(mass), 'wb') as f:\n",
+    "# Xsec: ggZZ: 10.163 fb; qqZZ: 1252 fb; ggZZ_low: 9.958 fb\n",
+    "# Sumofweight: ggZZ: 1176146.3; qqZZ: 5043806; ggZZ_low: 100064.62\n",
+    "#print(bkg1[0:5,-1])\n",
+    "bkg1[:,-1] = getweight(bkg1[:,-1], 1252./5043806.)\n",
+    "#print(bkg1[0:5,-1])\n",
+    "with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/UnscaledData/data_npy/tree_qqZZ.npy', 'wb') as f:\n",
     "        np.save(f, bkg1)\n",
     "\n",
     "n_trains = int(len(bkg1)*0.6)\n",
     "n_vals = int(len(bkg1)*0.8)\n",
     "\n",
     "btrain = bkg1[0:n_trains]\n",
-    "with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/sysData_down/train/tree_bkg.npy'.format(mass), 'wb') as f:\n",
+    "with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/UnscaledData/train/tree_qqZZ.npy', 'wb') as f:\n",
     "    np.save(f, btrain)\n",
     "    \n",
     "bval = bkg1[n_trains:n_vals]\n",
-    "with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/sysData_down/Validation/tree_bkg.npy'.format(mass), 'wb') as f:\n",
+    "with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/UnscaledData/Validation/tree_qqZZ.npy', 'wb') as f:\n",
     "    np.save(f, bval)\n",
     "    \n",
     "btest = bkg1[n_vals:]\n",
-    "with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/sysData_down/test/tree_bkg.npy'.format(mass), 'wb') as f:\n",
+    "with io.open('/Users/zhuheling/ML/keras/example_hep/myTest/Below180/UnscaledData/test/tree_qqZZ.npy', 'wb') as f:\n",
     "    np.save(f, btest)\n",
     "    \n",
-    "print (\"Training, validation, testing: \", btrain.shape, bval.shape, btest.shape)\n"
+    "print (\"Training, validation, testing: \", btrain.shape, bval.shape, btest.shape)\n",
+    "print (\"Weighted training, validation, testing: \", sum(btrain[:,-1]), sum(bval[:,-1]), sum(btest[:,-1]))"
    ]
   },
   {
