--- a/write2tree.ipynb
+++ b/write2tree.ipynb
@@ -58,7 +58,7 @@
      "output_type": "stream",
      "text": [
       "have 23 features\n",
-      "mZp is MZ2\n"
+      "mZp is MZ1\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
     "cuts = dict()\n",
     "#cuts = {\"MZZ\": \"<120\"}\n",
     "\n",
-    "mll_idx = 10 # 10 when signal sample < 40GeV; 9 when signal >40GeV\n",
+    "mll_idx = 9 # 10 when signal sample < 40GeV; 9 when signal >40GeV\n",
     "print(\"have {} features\".format(len(features)))\n",
     "print(\"mZp is\", features[mll_idx])"
    ]
@@ -152,8 +152,8 @@
     "    return new\n",
     "\n",
     "def get_part_feature(xtrain):\n",
-    "    nf = [0,1,2,3,4,5,6,7,8,11,12,13,14,15,16,17,18,19]\n",
-    "    #nf = [20,21,22,23,24,25,26,27,28,31,34,35,36,37,38,39]\n",
+    "    #nf = [0,1,2,3,4,5,6,7,8,11,12,13,14,15,16,17,18,19]\n",
+    "    nf = [0,1,2,3,4,5,6,7,8,11,12,13,14,16,17,18,19]\n",
     "    xtrain = xtrain[:,nf]\n",
     "    return xtrain"
    ]
@@ -167,122 +167,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking at file: /Users/zhuheling/ML/keras/example_hep/myTest/data/tree_57GeV.root\n",
-      "Read tree: tree_NOMINAL\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EG_RESOLUTION_ALL__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EG_RESOLUTION_ALL__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EG_SCALE_AF2__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EG_SCALE_AF2__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EG_SCALE_ALL__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EG_SCALE_ALL__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EL_EFF_ID_TOTAL_1NPCOR_PLUS_UNCOR__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EL_EFF_ID_TOTAL_1NPCOR_PLUS_UNCOR__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EL_EFF_Iso_TOTAL_1NPCOR_PLUS_UNCOR__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EL_EFF_Iso_TOTAL_1NPCOR_PLUS_UNCOR__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EL_EFF_Reco_TOTAL_1NPCOR_PLUS_UNCOR__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_EL_EFF_Reco_TOTAL_1NPCOR_PLUS_UNCOR__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_EtaIntercalibration_NonClosure__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_EtaIntercalibration_NonClosure__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_GroupedNP_1__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_GroupedNP_1__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_GroupedNP_2__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_GroupedNP_2__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_GroupedNP_3__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_GroupedNP_3__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_JER_SINGLE_NP__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_JvtEfficiency__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_JvtEfficiency__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_fJvtEfficiency__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_JET_fJvtEfficiency__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_ISO_STAT__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_ISO_STAT__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_ISO_SYS__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_ISO_SYS__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_RECO_STAT__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_RECO_STAT__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_RECO_STAT_LOWPT__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_RECO_STAT_LOWPT__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_RECO_SYS__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_RECO_SYS__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_RECO_SYS_LOWPT__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_RECO_SYS_LOWPT__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_TTVA_STAT__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_TTVA_STAT__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_TTVA_SYS__1down\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_EFF_TTVA_SYS__1up\n",
-      "before (6859, 23) after (6851, 23)\n",
-      "Read tree: tree_MUON_ID__1down\n",
-      "before (6852, 23) after (6844, 23)\n",
-      "Read tree: tree_MUON_ID__1up\n",
-      "before (6854, 23) after (6846, 23)\n",
-      "Read tree: tree_MUON_MS__1down\n",
-      "before (6863, 23) after (6855, 23)\n",
-      "Read tree: tree_MUON_MS__1up\n",
-      "before (6853, 23) after (6845, 23)\n",
-      "Read tree: tree_MUON_SAGITTA_RESBIAS__1down\n",
-      "before (6857, 23) after (6849, 23)\n",
-      "Read tree: tree_MUON_SAGITTA_RESBIAS__1up\n",
-      "before (6860, 23) after (6852, 23)\n",
-      "Read tree: tree_MUON_SAGITTA_RHO__1down\n",
-      "before (6874, 23) after (6866, 23)\n",
-      "Read tree: tree_MUON_SAGITTA_RHO__1up\n",
-      "before (6873, 23) after (6865, 23)\n",
-      "Read tree: tree_MUON_SCALE__1down\n",
-      "before (6860, 23) after (6852, 23)\n",
-      "Read tree: tree_MUON_SCALE__1up\n",
-      "before (6851, 23) after (6843, 23)\n",
-      "Read tree: tree_PRW_DATASF__1down\n",
-      "before (6859, 23) after (6848, 23)\n",
-      "Read tree: tree_PRW_DATASF__1up\n",
-      "before (6859, 23) after (6859, 23)\n"
+      "Looking at file: /Users/zhuheling/ML/keras/example_hep/myTest/data/tree_fake.root\n",
+      "Read tree: tree_NOMINAL Entries: 40855\n",
+      "[[   96.68231711    69.47304687    32.69924219 ... -9999.\n",
+      "  -9999.         -9999.        ]\n",
+      " [   85.5777831     29.33117578    24.99976562 ... -9999.\n",
+      "  -9999.         -9999.        ]\n",
+      " [   35.86128791    94.44622656    22.36219922 ... -9999.\n",
+      "  -9999.         -9999.        ]\n",
+      " ...\n",
+      " [   68.36365433    37.92746875    31.70921289 ... -9999.\n",
+      "  -9999.         -9999.        ]\n",
+      " [   52.04980381    34.13291797    23.31287109 ... -9999.\n",
+      "  -9999.         -9999.        ]\n",
+      " [   69.61498517    28.49956836    14.81537695 ... -9999.\n",
+      "  -9999.         -9999.        ]]\n"
      ]
     }
    ],
@@ -294,16 +200,16 @@
     "import numpy as np\n",
     "from keras.models import load_model\n",
     "\n",
-    "model = load_model(\"Below180/models/SGD/baseline_18features.h5\")\n",
+    "model_hM = load_model(\"Below180/models/noptZZ_17f_hM.h5\")\n",
+    "#model_lM = load_model(\"Below180/models/Below120_18features_lM.h5\")\n",
     "\n",
-    "#msamp = [5,7,9,11,13,15,17,19,23,27,31,35,39,45,51,57,63,69,75]\n",
-    "msamp = [57]\n",
+    "#msamp = [42,45,48,51,54,57,60,63,66,69,72,75]\n",
+    "#msamp = ['qqZZ', 'ggZZ', 'ggZZ_low', 'fake']\n",
+    "msamp = ['fake']\n",
     "\n",
     "base = '/Users/zhuheling/ML/keras/example_hep/myTest/'\n",
-    "#trname='tree_NOMINAL'\n",
-    "#trlist=['tree_NOMINAL', 'tree_MUON_SCALE__1down', 'tree_MUON_SCALE__1up']\n",
     "for mass in msamp:\n",
-    "    _file = base+'data/tree_{}GeV.root'.format(mass)\n",
+    "    _file = base+'data/tree_{}.root'.format(mass)\n",
     "    print(\"Looking at file:\", _file)\n",
     "    f = TFile.Open(_file)\n",
     "    list_tree=f.GetListOfKeys()\n",
@@ -312,21 +218,22 @@
     "        tree=key.ReadObj()\n",
     "        trname=tree.GetName()\n",
     "        if \"tree_\" not in trname: continue\n",
-    "        print (\"Read tree:\", trname)\n",
-    "        dat = build_array(_file, trname, features, cuts, mll_idx = 9)\n",
+    "        print (\"Read tree:\", trname, \"Entries:\", tree.GetEntries())\n",
+    "        dat = build_array(_file, trname, features, cuts, mll_idx = 9, should_clean_arrays=False)\n",
     "        dat1 = dat\n",
     "        dat1[:,0] = dat1[:,9]\n",
     "        dat1_par = get_part_feature(dat1)\n",
-    "        pred_MZ1 = model.predict(dat1_par).ravel()   \n",
+    "        print(dat1_par)\n",
+    "        pred_hM = model_hM.predict(dat1_par).ravel()   \n",
     "    \n",
-    "        dat2 = dat\n",
-    "        dat2[:,0] = dat2[:,10]\n",
-    "        dat2_par = get_part_feature(dat2)\n",
-    "        pred_MZ2 = model.predict(dat2_par).ravel()  \n",
+    "        #dat2 = dat\n",
+    "        #dat2[:,0] = dat2[:,10]\n",
+    "        #dat2_par = get_part_feature(dat2)\n",
+    "        #pred_lM = model_lM.predict(dat2_par).ravel()  \n",
     " \n",
     "        ## plot output score\n",
-    "        #plt.hist(pred_MZ1, bins=50, histtype='step', label='signal MZ1', density=True)\n",
-    "        #plt.hist(pred_MZ2, bins=50, histtype='step', label='signal MZ2', density=True)\n",
+    "        #plt.hist(pred_hM, bins=50, histtype='step', label='signal MZ1', density=True)\n",
+    "        #plt.hist(pred_lM, bins=50, histtype='step', label='signal MZ2', density=True)\n",
     "        #plt.legend(loc=2)\n",
     "        #plt.xlabel(\"Output score\")\n",
     "        #plt.ylabel(\"Events\")\n",
@@ -339,16 +246,16 @@
     "        newtree = tree.CloneTree()\n",
     "        newtree.SetName(trname)\n",
     "    \n",
-    "        DNN_MZ1 = array( 'f', [ 0. ] )\n",
-    "        newbranch_0 = newtree.Branch( 'DNN_MZ1', DNN_MZ1, 'DNN_MZ1/F' )    \n",
-    "        DNN_MZ2 = array( 'f', [ 0. ] )\n",
-    "        newbranch_1 = newtree.Branch( 'DNN_MZ2', DNN_MZ2, 'DNN_MZ2/F' )   \n",
-    "    \n",
-    "        for i, preds in enumerate(zip(pred_MZ1, pred_MZ2)):\n",
-    "            DNN_MZ1[0] = preds[0]\n",
-    "            DNN_MZ2[0] = preds[1]\n",
+    "        DNN_highM = array( 'f', [ 0. ] )\n",
+    "        newbranch_0 = newtree.Branch( 'DNN_highM', DNN_highM, 'DNN_highM/F' )    \n",
+    "        #DNN_lowM = array( 'f', [ 0. ] )\n",
+    "        #newbranch_1 = newtree.Branch( 'DNN_lowM', DNN_lowM, 'DNN_lowM/F' )   \n",
+    "        \n",
+    "        for i, preds in enumerate(pred_hM):\n",
+    "            DNN_highM[0] = preds\n",
+    "            #DNN_lowM[0] = preds[1]\n",
     "            newbranch_0.Fill()\n",
-    "            newbranch_1.Fill()\n",
+    "            #newbranch_1.Fill()\n",
     "\n",
     "        newtree.Write()\n",
     "        newfile.Close()\n",
